--- a/src/views/posts/_posts.sass
+++ b/src/views/posts/_posts.sass
@@ -37,6 +37,9 @@
 .sidebar-posts
   width: 100%
 
+  .list-actions
+    justify-content: center
+
 @media screen and (min-width: $bp--mn)
   .main-posts
     + .footer-actions
